# arranger

./: .gitignore  .gitignore~  DEVELOPMENT_NOTES.md  README.md  arranger.py  build.sh  deleted_widgets.txt  main.py  requirements.txt  template.html  widgets.txt
audio_server/: BUILDING.md  CMakeLists.txt  CMakeLists.txt.bak  LV2_PLUGIN_INSTALL.md  PLUGIN_PROGRESS.md  build.sh
audio_server/bindings/: bindings.cpp
audio_server/cmake/: mingw-w64-x86_64.cmake
audio_server/include/: audio_engine.h  debug.h  graph.h  ipc.h  plugin_adapter.h  plugin_api.h  plugin_loader.h  protocol.h  scheduler.h  server_handler.h  synth_node.h
audio_server/plugins/builtin/: arpeggiator_plugin.cpp  control_lfo_plugin.cpp  control_monitor_plugin.cpp  control_source_plugin.cpp  fluidsynth_plugin.cpp  mixer_plugin.cpp  note_gate_plugin.cpp  reverb_plugin.cpp  sine_plugin.cpp
audio_server/src/: audio_engine.cpp  builtin_plugins.cpp  graph.cpp  ipc.cpp  lv2_host.cpp  main.cpp  plugin_adapter.cpp  plugin_registry.cpp  scheduler.cpp  server_handler.cpp  synth_node.bak  synth_node.cpp
audio_server/test/: debug_note_gate.py  diag_lv2_ports.py  list_plugins.py  test_audio_server.py  test_client.py  test_control_lfo.py  test_graph.cpp  test_ipc.cpp  test_render.cpp
defaults/: initial.json
standalone/: .gitignore~  PLAN.md  README.md  app.py  clipboard.py  debug_widgets.py  main.py  requirements.txt  run.sh  state.py  test.json  undo.py
standalone/core/: audio.py  binding_engine.py  engine.py  midi.py  server_engine.py  settings.py  sf2.py
standalone/defaults/: initial.json  initial.json~
standalone/graph_editor/: __init__.py  graph_editor_window.py  graph_model.py  node_canvas.py
standalone/ops/: __init__.py  export.py  note_edit.py  patterns.py  playback.py  project_io.py  tracks.py
standalone/planning_docs/: ARCHITECTURE.md  CONVERSION_TEMPLATES.md  MIGRATION_GUIDE.md  PLUGIN_PROGRESS.md  bindings_plan.md  plugin_interface_plan.md  realtime_audio_plan.md
standalone/ui/: arrangement.py  beat_grid.py  dialogs.py  pattern_list.py  piano_roll.py  topbar.py  track_panel.py
